modified appeareance on smaller devices and fixed navbar issues

--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -56,5 +56,6 @@
 @media screen and (max-width: 640px) {
   .footer-container {
     grid-template-columns: 1fr;
+    width: 70%;
   }
 }
